WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216453
[LFC][IFC] Text run is at incorrect vertical position when parent inline box is stretched
https://bugs.webkit.org/show_bug.cgi?id=216453
Summary
[LFC][IFC] Text run is at incorrect vertical position when parent inline box ...
alan
Reported
2020-09-12 20:43:18 PDT
ssia
Attachments
Patch
(2.27 KB, patch)
2020-09-12 20:49 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2020-09-12 20:49:56 PDT
Created
attachment 408634
[details]
Patch
EWS
Comment 2
2020-09-13 09:19:15 PDT
Committed
r266995
: <
https://trac.webkit.org/changeset/266995
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 408634
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-09-13 09:20:15 PDT
<
rdar://problem/68805271
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug